# near_line_connect

./: .gitignore  Caddyfile  Cargo.toml
near-line/: Cargo.toml
near-line/src/: lib.rs
near_line_connect_server/: Cargo.toml
neardev/: dev-account  dev-account.env
scripts/: get_line_id.sh  record_wallet_by_line_id.sh  set_public_key.sh
server/: Cargo.toml
server/src/: lib.rs
