[package]
name = "near_line_connect_contract"
version = "0.0.1"
authors = [ "Chop Tr (chop.ink) <chop@chop.ink>" ]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0"
hex = "0.4.3"
elliptic-curve = "0.12.2"
ed25519-dalek = "1.0.1"
getrandom = { version = "0.2.7", features = ["js"] }
