[package]
authors = ["Chop Tr (chop@chop.ink)"]
name = "near_line_connect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ed25519-dalek = "1.0.1"
rand = { version = "0.7.0", features = ["std"] } # ed25519-dalek depends on this old version of rand
hex = "0.4.3"
actix-web = "4"
actix-cors = "0.6.1"
rusqlite = "0.28.0"
env_logger = "0.9.0"
reqwest = { version = "0.11.0", features = ["json"] }
derive_more = "0.99.17"

[[bin]]
name = "cli"
path = "src/cli/bin/main.rs"

[[bin]]
name = "http"
path = "src/http/bin/main.rs"
